# proton-imaging

./: .gitignore  Cargo.toml  analyticAA.py
amr_quadtree/: Cargo.toml
amr_quadtree/src/: lib.rs
derefined_render_py/: Cargo.toml  pyproject.toml
derefined_render_py/src/: lib.rs  quadtree.rs
derefined_renderer/: Cargo.toml
derefined_renderer/src/: main.rs
edge_based/: grid_rasterize.py
geometry/: Cargo.toml
geometry/src/: lib.rs
grid_rasterize/: Cargo.toml
grid_rasterize/src/: acc.rs  lib.rs
grid_rasterize_py/: Cargo.toml  pyproject.toml
grid_rasterize_py/python-src/grid_rasterize/: __init__.py
grid_rasterize_py/src/: lib.rs
testbench/: Cargo.toml  pyproject.toml
testbench/python-src/grid_rasterize/: __init__.py  rust_bindings.py
testbench/src/: acc.rs  asynch.rs  generator.rs  lib.rs  qt.rs
testbench/tests/: test_producer.rs
