[package]
name = "derefined_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geometry = { path = "../geometry" }
amr_quadtree = { path = "../amr_quadtree" }
grid_rasterize = { path = "../grid_rasterize" }
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
ndarray-stats = "0.5.1"
rand = "0.8.5"
thiserror = "1.0.40"
