[package]
name = "grid_rasterize_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "grid_rasterize_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
grid_rasterize = { path = "../grid_rasterize" }
geometry = { path = "../geometry" }
ndarray = { version = "0.15.6", features = ["rayon"] }
numpy = "0.18.0"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
rayon = "1.7.0"
