[package]
name = "testbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "grid_rasterize"
crate-type = ["cdylib","rlib"]

[dependencies]
ndarray = { version = "0.15.6", features = ["rayon"] }
numpy = "0.18.0"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
rayon = "1.7.0"
async-channel = "1.8.0"
tokio = { version = "1.26.0", features = ["sync", "macros", "rt", "rt-multi-thread"] }
async-scoped = { version = "0.7.1", features = ["use-tokio"] }
crossbeam = "0.8.2"
futures = "0.3.27"
async-recursion = "1.0.4"

[package.metadata.maturin]
name = "grid_rasterize._bindings"
